# constella

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/compliance/: Cargo.toml  README.md
crates/demo-token/: Cargo.toml  README.md
crates/demo-token/src/: lib.rs  test.rs
crates/hub/: Cargo.toml  README.md
crates/hub-module-country-restrict/: Cargo.toml
crates/hub-module-denylist/: Cargo.toml
crates/hub-module-lockup/: Cargo.toml
crates/hub-module-max-balance/: Cargo.toml
crates/hub-module-max-holders/: Cargo.toml
crates/hub-module-max-investors-per-country/: Cargo.toml
crates/hub-module-max-investors-per-country/src/: lib.rs  test.rs
crates/hub-module-transfer-window/: Cargo.toml
crates/hub-module-zk-eligibility/: Cargo.toml
crates/identity-mock/: Cargo.toml  README.md
crates/module-country-restrict/: Cargo.toml  README.md
crates/module-denylist/: Cargo.toml  README.md
crates/module-identity-zk/: Cargo.toml  README.md
crates/module-interface/: Cargo.toml  README.md
crates/module-lockup/: Cargo.toml  README.md
crates/module-max-balance/: Cargo.toml  README.md
crates/module-max-holders/: Cargo.toml  README.md
crates/module-max-investors-per-country/: Cargo.toml  README.md
crates/module-transfer-window/: Cargo.toml  README.md
crates/module-zk-eligibility/: Cargo.toml  README.md
crates/zk-verifier/: Cargo.toml  README.md
crates/zk-verifier/src/: lib.rs  test.rs
docs/: DECISIONS.md  PRD-Constella.md  architecture.md  evidence-testnet.md  quickstart.md
scripts/: bootstrap-hub-testnet.sh  capture-evidence.sh  deploy-testnet.sh  deployed.testnet.json
tools/zk-encode/: Cargo.toml
web/: README.md  index 2.html  package-lock.json  package.json  vite.config.ts
web/scripts/: verify-encoder.mjs  verify-launch-encoder.mjs
web/src/: App.tsx  deployed.testnet.json  freighter.ts  hub.testnet.json  hub.ts  main.tsx  (+7 more)
zk/: README.md  build.sh  input.json  package-lock.json  package.json
(+65 files in other folders)
