[package]
name = "constella-demo-token"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
constella-module-interface = { path = "../module-interface" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
constella-compliance = { path = "../compliance" }
constella-identity-mock = { path = "../identity-mock" }
constella-module-max-holders = { path = "../module-max-holders" }
constella-module-lockup = { path = "../module-lockup" }
constella-module-max-balance = { path = "../module-max-balance" }
constella-module-country-restrict = { path = "../module-country-restrict" }
