[package]
name = "constella-zk-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
constella-module-interface = { path = "../module-interface" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
serde_json = "1"
